--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
-    "supabase:new-migration": "bunx supabase migration new"
+    "db:migration": "bunx supabase migration new",
+    "db:migrate-up": "bunx supabase migration up",
+    "db:start": "bunx supabase start",
+    "db:stop": "bunx supabase stop",
+    "db:reset": "bunx supabase reset",
+    "type:regen-local": "supabase gen types typescript --local"
   },
   "dependencies": {
     "@primeuix/themes": "^1.2.3",
@@ -25,7 +30,7 @@
     "pinia": "^3.0.3",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.7",
-    "supabase": "^2.34.3",
+    "supabase": "^2.40.7",
     "tailwindcss": "^4.1.12",
     "vue": "^3.5.19",
     "vue-router": "^4.5.1"
